awesome_cats_backend/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: backend-deployment 
  labels: 
    app: backend 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: backend 
  template: 
    metadata: 
      labels: 
        app: backend 
    spec: 
      containers: 
        - name: backend 
          image: samarbekova/latest:backend
          ports: 
            - containerPort: 3000
